Bug 227038 - Balance after values on homepage for future payments is wrong
Summary: Balance after values on homepage for future payments is wrong
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 230911 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-02-15 18:30 UTC by Thomas Baumgart
Modified: 2010-03-17 00:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2010-02-15 18:30:59 UTC
Version:            (using KDE 4.3.5)
Installed from:    openSUSE RPMs

Values differ between the KDE3 and KDE4 version using the same data file.
Comment 1 Alvaro Soliverez 2010-02-18 19:20:44 UTC
Isn't this fixed by SVN commit 1091634?
Comment 2 Thomas Baumgart 2010-02-18 21:34:21 UTC
No, unfortunately not. I still see it using r1092378.
Comment 3 Cristian Oneț 2010-02-19 10:46:05 UTC
(In reply to comment #2)
> No, unfortunately not. I still see it using r1092378.
Could the commit that fixed BUG 216931 cause this problem?
Comment 4 Alvaro Soliverez 2010-02-20 12:20:56 UTC
SVN commit 1093198 by asoliverez:

The forecast was being queried for the wrong date. Therefore, the values would not match the schedules.

BUG:227038

 M  +1 -1      khomeview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1093198
Comment 5 Alvaro Soliverez 2010-03-17 00:58:05 UTC
*** Bug 230911 has been marked as a duplicate of this bug. ***