The forecast was being queried for the wrong date. Therefore, the values would not match the schedules.

BUG:227038

svn path=/trunk/playground/office/kmymoney/; revision=1093198